# Interpreter

./: .env  .gitignore  CMakeLists.txt  ConcreteSyntaxTree.cpp  ConcreteSyntaxTree.h  Makefile  Node.cpp  Node.h  OutPutGenerator.cpp  OutPutGenerator.h  Parser.cpp  Parser.h  README.md  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  a.out  build.js  build.sh  fileAsArray.cpp  fileAsArray.h  format_code.sh  main  main.cpp  package-lock.json  package.json  programming_assignment_1-test_file_1.c  programming_assignment_1-test_file_2.c  programming_assignment_1-test_file_4.c  programming_assignment_1-test_file_6.c  start.js  start.sh
Blue_Interpreter/: .env  blueAPI.js  main  package.json  tempSourceCode.c
Blue_Interpreter/src/: main.cpp  testFile.c
Blue_Interpreter/src/AST/: ASTParser.cpp  ASTParser.h
Blue_Interpreter/src/CST/: ConcreteSyntaxTree.h  Parser.cpp  Parser.h
Blue_Interpreter/src/CommentRemoval/: fileAsArray.h
Blue_Interpreter/src/ErrorHandler/: ErrorCodes.md
Blue_Interpreter/src/Interpreter/: Interpreter.cpp  Interpreter.h
Blue_Interpreter/src/SymbolTable/: SymbolTable.h  SymbolTablesLinkedList.cpp
Blue_Interpreter/src/Token/: Token.h
Frontend/: index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  api.js  main.jsx
Testing/: ErrorCodes.md  programming_assignment_1-test_file_1.c  programming_assignment_1-test_file_3.c  programming_assignment_1-test_file_4.c  programming_assignment_1-test_file_5.c
Testing/Assignment3/: README.md
Testing/BNF/: BNF_Tokens.txt
src/: main.cpp  package-lock.json
src/AST/: AST.cpp  AST.h  AST.hpp  ASTParser.cpp  ASTParser.h  AST_Node.cpp  AST_Node.hpp
src/CST/: ConcreteSyntaxTree.cpp  ConcreteSyntaxTree.h  Node.cpp  Node.h  Parser.cpp  Parser.h
src/CommentRemoval/: fileAsArray.cpp
src/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.h
src/Interpreter/: Interpreter.cpp  Interpreter.h
src/Node/: Node.cpp  Node.h
src/OutputCST/: OutPutGenerator.cpp  OutPutGenerator.h
src/OutputGenerator/: OutPutGenerator.cpp  OutPutGenerator.h
src/SymbolTable/: SymbolTable.cpp  SymbolTable.h  SymbolTable.hpp  SymbolTables.cpp  SymbolTables.hpp  SymbolTablesLinkedList.cpp  SymbolTablesLinkedList.h
src/Token/: Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
(+55 files in other folders)
